# knowledge_qa

./: .gitignore  README.md  main.py  pyproject.toml
agent/: react_agent.py
agent/tool/: agent_tools.py  middleware.py
api/: chat.py  documents.py
app/: chain.py
app/db/: engine.py  message_store.py
core/: config.py  logger.py  paths.py  validators.py
db/: conversation_repo.py  engine.py  file_repo.py  session.py
history/: models.py
history/db/: engine.py  files.py  message_store.py
model/: factory.py
models/: conversation.py  uploaded_file.py
prompts/: main_prompt.txt  rag_summarize.txt
rag/: rag_service.py  vector_store.py
routers/: chat.py  files.py
schemas/: chat.py
services/: chat_service.py  document_service.py
static/: index.html
static/css/: style.css
static/js/: app.js
utils/: config_handler.py  file_handler.py  load_env.py  logger_handler.py  path_tool.py  prompt_loader.py
